--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-router": "^6.30.1",
     "react-router-dom": "^6.30.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "unique-username-generator": "^1.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
